# mitproblemsets

./: README.md  pyproject.toml
6.0001/PS2/: hangman.py  ps2.py  trash
6.0001/PS3/: ps3.py  trash
6.0001/PS4/: <F9>  ps4a.py  ps4b.py  ps4c.py  trash
6.0001/PS5/: debate_triggers.txt  ps5.py  ps5_test.py  trash.py  triggers.txt
6.0002/PS1/: ps1a.py
PS2/: hangman.py
PS3/: ps3.py
